--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "FithOn",
+  "name": "FithOn - Fitness app for 5/3/1 lifting program by Jim Wendler",
   "short_name": "FithOn",
   "icons": [
     {
@@ -30,7 +30,7 @@
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "any image/png"
     },
     {
       "src": "/android-chrome-256x256.png",
@@ -51,11 +51,11 @@
       "src": "/maskable_icon.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "start_url": "/",
-  "theme_color": "#222222",
-  "background_color": "#222222",
   "display": "standalone"
 }
