--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "",
-  "short_name": "FithOn",
+  "short_name": "",
   "icons": [
     {
       "src": "/android-chrome-36x36.png",
@@ -46,12 +46,6 @@
       "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-      "src": "/maskable_icon.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any maskable"
     }
   ],
   "theme_color": "#ffffff",
