--- a/public/manifest.json
+++ b/public/manifest.json
@@ -54,8 +54,8 @@
       "purpose": "any maskable"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "theme_color": "#424242",
+  "background_color": "#424242",
   "start_url": "/",
   "display": "standalone"
 }
