--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "short_name": "",
+  "name": "FithOn",
+  "short_name": "FithOn",
   "icons": [
     {
       "src": "/android-chrome-36x36.png",
