--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,13 @@
     {
       "src": "/android-chrome-384x384.png",
       "sizes": "384x384",
-      "type": "any image/png"
+      "type": "image/png"
+    },
+    {
+      "src": "/maskable_icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "theme_color": "#424242",
